--- a/src/components/update-item/update-item.module.scss
+++ b/src/components/update-item/update-item.module.scss
@@ -15,7 +15,7 @@
     letter-spacing: -0.04em;
     font-weight: 600;
     font-family: inherit;
-    color: #000;
+    color: var(--foreground-primary);
     display: inline-block;
     min-width: 300px;
     max-width: 500px;
@@ -45,7 +45,7 @@
     text-decoration: none;
     backdrop-filter: blur(100px);
     border-radius: 99px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
+    border: 1px solid var(--container-divider);
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -55,13 +55,15 @@
     transition: 1s;
     cursor: pointer;
     color: inherit;
+
+    @media (prefers-color-scheme: dark) {
+        img {
+            filter: invert(1);
+        }
+    }
 }
 .buttonSecondary:hover {
-    background-color: rgba(255, 255, 255, 0.1);
-    gap: 8px;
-    padding-left: 16px;
-    padding-right: 16px;
-    box-sizing: border-box;
+    background-color: var(--container-divider);
 }
 .textBlockDouble {
     flex: 1;
@@ -85,7 +87,7 @@
 .galleryItem {
     flex: 1;
     border-radius: 30px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
+    border: 1px solid var(--container-divider);
     box-sizing: border-box;
     height: 500px;
     overflow: hidden;
@@ -112,7 +114,7 @@
     max-width: 1100px;
     text-align: left;
     font-size: 18px;
-    color: rgba(0, 0, 0, 0.7);
+    color: var(--foreground-secondary);
     font-family: Manrope;
 }
 
